[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown_utilities"
version = "0.0.1"
authors = [
  { name="Homero Kemmerich", email="hmvkemmerich@gmail.com" },
]
description = "A simple markdown exporter"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/HomeroKemmerich/"